# data-intelligence-researcher

./: .gitignore  CLAUDE.md  README.md  investigation_report.md  pyproject.toml
.claude/: settings.json  statusline.py
.claude/agents/: code-quality-reviewer.md  data-cleaner.md  reporter.md  statistician.md  visualizer.md
.claude/commands/: commit-message.md  dashboard.md  execute.md  insights.md  plan.md  planner.md  solve.md  spec.md  style.md  uv.md
.claude/status_lines/: status_line.py  status_line_v1.py
_archive/: data_science_detective_agency.py  kaggle_plan_superstore.md  movie_scene2.html
_ideas/: THE_MOVIE.md  analytics.md  example-idea.md  kaggle_ideas.md  test.md
_plans/: analytics.md  analytics_report.md  kaggle_plan.md  test.md
_specs/: analytics.md  kaggle_specs.md
data/: data.csv
logs/: .session_starts.json  session_20260320_065219_743e6d20.csv  session_20260320_084610_c4f62d97.csv  session_20260320_095310_7070cbe9.csv  session_20260320_095521_26eb9561.csv  session_20260320_164556_f3b11829.csv  session_20260321_131530_f40ba31b.csv  session_20260321_175530_e4467aa8.csv  session_20260321_180455_8525db65.csv
output/: answer_experienced_sales_drops_stop.md
output/PROJECT_01/: dirty.csv  features.csv  sales_dashboard.py  sales_summary.csv
output/PROJECT_02/: dirty.csv  eda_summary.csv  (+1 more)
src/: dashboard.py  data_science_detective_agency.py  lesson01_app.py  movie_launcher.py  movie_scene1.html  phase1_eda.py  phase1_etl.py  phase2_eda.py  phase2_features.py  phase3_dashboard.py  phase3_tables.py  phase4_report.py  tech_team_slides.py
(+29 files in other folders)
